VTable now checks whether the default methods are open to our module before trying to call privateLookupIn